# intelliEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REMAINING_TASKS_LINUX_WINDOWS.md  app  config.ini  config.json  run_tests.sh  setup_deps.sh  test_llm
Docs/: For_the_A.md  pour_dev-B.md
data/: memoire_licence.json
docs/: README.md  index.html  nav.js  server.py
include/: gap_buffer.h
include/config/: config_parser.h
include/editor/: file_manager.h  gap_buffer.h
include/llm/: llm_bridge.h  llm_client.h  llm_prompts.h  llm_status.h
include/nlp/: hunspell_wrap.h  nlp_engine.h  nlp_highlighter.h
include/rules/: rules.h
include/ui/: callbacks.h  editor.h  sidebar.h  toolbar.h  window.h
src/: checkers.c  main.c  parser.c
src/config/: config_parser.c
src/editor/: file_manager.c  gap_buffer.c
src/llm/: llm_bridge.c  llm_client.c  llm_client.h  llm_prompts.h  llm_status.c
src/nlp/: hunspell_wrap.c  nlp_engine.c  nlp_highlighter.c
src/rules/: checkers.c  parser.c  ruleset_eval.c
src/ui/: callbacks.c  editor.c  sidebar.c  toolbar.c  window.c
tests/: test_config_parser.c  test_gap_buffer.c  test_llm.c  test_rules.c
